--- a/NetCoreProject.Batch/appsettings.json
+++ b/NetCoreProject.Batch/appsettings.json
@@ -54,7 +54,7 @@
     "ValidFor": 5
   },
   "DataProtection": {
-    "Type": 0, // 1.Redis, 2.SqlServer
+    "Type": 0, // 0.Memory, 1.Redis, 2.SqlServer 
     "ApplicationName": "NetCoreProject.Backend",
     "KeyLifetime": 3560,
     "AutomaticKeyGeneration": true
