--- a/NetCoreProject.Moq/NetCoreProject.Moq.csproj
+++ b/NetCoreProject.Moq/NetCoreProject.Moq.csproj
@@ -7,6 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.21" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.21" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.21" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
@@ -15,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NetCoreProject.Backend\NetCoreProject.Backend.csproj" />
     <ProjectReference Include="..\NetCoreProject.BusinessLayer\NetCoreProject.BusinessLayer.csproj" />
     <ProjectReference Include="..\NetCoreProject.DataLayer\NetCoreProject.DataLayer.csproj" />
     <ProjectReference Include="..\NetCoreProject.Domain\NetCoreProject.Domain.csproj" />
