--- a/NetCoreProject.NSubstitute/NetCoreProject.NSubstitute.csproj
+++ b/NetCoreProject.NSubstitute/NetCoreProject.NSubstitute.csproj
@@ -7,6 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.21" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.21" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.21" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.15">
@@ -19,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NetCoreProject.Backend\NetCoreProject.Backend.csproj" />
     <ProjectReference Include="..\NetCoreProject.BusinessLayer\NetCoreProject.BusinessLayer.csproj" />
     <ProjectReference Include="..\NetCoreProject.DataLayer\NetCoreProject.DataLayer.csproj" />
     <ProjectReference Include="..\NetCoreProject.Domain\NetCoreProject.Domain.csproj" />
