--- a/NetCoreProject.Backend/nlog.config
+++ b/NetCoreProject.Backend/nlog.config
@@ -53,6 +53,8 @@
 		<target xsi:type="Console" name="console"
             layout="${DefaultLayout}" />
 
+		<!-- ${date:format=yyyy-MM-dd} -->
+
 	</targets>
 
 	<rules>
