--- a/NetCoreProject.Batch/nlog.config
+++ b/NetCoreProject.Batch/nlog.config
@@ -13,54 +13,26 @@
 	<variable name="DefaultLayout" value="[${longdate}][${level}][${logger}] ${message} ${exception}"/>
 
 	<targets>
-
 		<target xsi:type="File" name="info"
-            fileName="${DefaultPath}\info\${DefaultName}.log"
+            fileName="${DefaultPath}\${DefaultName}-info.log"
             encoding="utf-8"
-            archiveFileName="${DefaultPath}\info\${DefaultName}.{#####}.txt"
+            archiveFileName="${DefaultPath}\${DefaultName}-info.{#####}.log"
             archiveAboveSize="5120000"
             archiveNumbering="Sequence"
             maxArchiveFiles="10"
             layout="${DefaultLayout}" />
-
-		<target xsi:type="File" name="warn"
-            fileName="${DefaultPath}\warn\${DefaultName}.log"
-            encoding="utf-8"
-            archiveFileName="${DefaultPath}\warn\${DefaultName}.{#####}.txt"
-            archiveAboveSize="5120000"
-            archiveNumbering="Sequence"
-            maxArchiveFiles="10"
-            layout="${DefaultLayout}" />
-
 		<target xsi:type="File" name="error"
-            fileName="${DefaultPath}\error\${DefaultName}.log"
+            fileName="${DefaultPath}\${DefaultName}-error.log"
             encoding="utf-8"
-            archiveFileName="${DefaultPath}\error\${DefaultName}.{#####}.txt"
+            archiveFileName="${DefaultPath}\${DefaultName}-error.{#####}.txt"
             archiveAboveSize="5120000"
             archiveNumbering="Sequence"
             maxArchiveFiles="10"
             layout="${DefaultLayout}" />
-
-		<target xsi:type="File" name="whole"
-            fileName="${DefaultPath}\whole\${DefaultName}.log"
-            encoding="utf-8"
-            archiveFileName="${DefaultPath}\whole\${DefaultName}.{#####}.txt"
-            archiveAboveSize="5120000"
-            archiveNumbering="Sequence"
-            maxArchiveFiles="10"
-            layout="${DefaultLayout}" />
-
-		<target xsi:type="Console" name="console"
-            layout="${DefaultLayout}" />
-
 	</targets>
 
 	<rules>
-
-		<logger name="*" levels="Info" writeTo="info" />
-		<logger name="*" levels="Warn" writeTo="warn" />
+		<logger name="*" levels="Info,Warn,Error" writeTo="info" />
 		<logger name="*" levels="Error" writeTo="error" />
-		<logger name="*" levels="Trace,Debug,Info,Warn,Error" writeTo="console, whole" />
-
 	</rules>
 </nlog>
