--- a/NetCoreProject.NUnit/nlog.config
+++ b/NetCoreProject.NUnit/nlog.config
@@ -7,26 +7,32 @@
   throwExceptions="true"
   internalLogLevel="Off"
   internalLogFile="d:\WorkSpace\NetCoreProject\NUnitLog\nlog-internal.txt">
-    
-  <variable name="DefaultPath" value="d:\WorkSpace\NetCoreProject\NUnitLog"/>
-  <variable name="DefaultName" value="${environment:SAMPLEPROJECT_TESTID}" />
-  <variable name="DefaultLayout" value="[${longdate}][${level}][${logger}] ${message} ${exception}"/>
 
-  <targets>
-      
-    <target xsi:type="File" name="whole"
-            fileName="${DefaultPath}\${DefaultName}.log"
+	<variable name="DefaultPath" value="d:\WorkSpace\NetCoreProject\NUnitLog"/>
+	<variable name="DefaultName" value="${environment:SAMPLEPROJECT_TESTID}" />
+	<variable name="DefaultLayout" value="[${longdate}][${level}][${logger}] ${message} ${exception}"/>
+
+	<targets>
+		<target xsi:type="File" name="info"
+            fileName="${DefaultPath}\${DefaultName}-info.log"
             encoding="utf-8"
+            archiveFileName="${DefaultPath}\${DefaultName}-info.{#####}.log"
+            archiveAboveSize="5120000"
+            archiveNumbering="Sequence"
+            maxArchiveFiles="10"
             layout="${DefaultLayout}" />
-      
-    <target xsi:type="Console" name="console"
+		<target xsi:type="File" name="error"
+            fileName="${DefaultPath}\${DefaultName}-error.log"
+            encoding="utf-8"
+            archiveFileName="${DefaultPath}\${DefaultName}-error.{#####}.txt"
+            archiveAboveSize="5120000"
+            archiveNumbering="Sequence"
+            maxArchiveFiles="10"
             layout="${DefaultLayout}" />
-      
-  </targets>
-    
-  <rules>
-      
-    <logger name="*" levels="Trace,Debug,Info,Warn,Error" writeTo="console, whole" />
-      
-  </rules>
+	</targets>
+
+	<rules>
+		<logger name="*" levels="Info,Warn,Error" writeTo="info" />
+		<logger name="*" levels="Error" writeTo="error" />
+	</rules>
 </nlog>
