--- a/NetCoreProject.Backend/nlog.config
+++ b/NetCoreProject.Backend/nlog.config
@@ -9,62 +9,28 @@
   internalLogFile="d:\WorkSpace\NetCoreProject\BackendLog\nlog-internal.txt">
 
 	<variable name="DefaultPath" value="d:\WorkSpace\NetCoreProject\BackendLog"/>
-	<variable name="DefaultName" value="${aspnet-mvc-controller}.${aspnet-mvc-action}"/>
-	<variable name="DefaultLayout" value="[${longdate}][${level}][${aspnet-request-ip}][${aspnet-request-headers:HeaderNames=CorrelationGuid:ValuesOnly=true}][${logger}] ${message} ${exception}"/>
+	<variable name="DefaultLayout" value="[${longdate}][${level}][${aspnet-request-ip}][${aspnet-mvc-controller}][${aspnet-mvc-action}][${aspnet-request-headers:HeaderNames=CorrelationGuid:ValuesOnly=true}][${logger}] ${message} ${exception}"/>
 
 	<targets async="true">
-
 		<target xsi:type="File" name="info"
-            fileName="${DefaultPath}\info\${DefaultName}.log"
+            fileName="${DefaultPath}\info.log"
             encoding="utf-8"
-            archiveFileName="${DefaultPath}\info\${DefaultName}.{#####}.txt"
+            archiveFileName="${DefaultPath}\info.{#####}.log"
             archiveAboveSize="5120000"
             archiveNumbering="Sequence"
             maxArchiveFiles="10"
             layout="${DefaultLayout}" />
-
-		<target xsi:type="File" name="warn"
-            fileName="${DefaultPath}\warn\${DefaultName}.log"
-            encoding="utf-8"
-            archiveFileName="${DefaultPath}\warn\${DefaultName}.{#####}.txt"
-            archiveAboveSize="5120000"
-            archiveNumbering="Sequence"
-            maxArchiveFiles="10"
-            layout="${DefaultLayout}" />
-
 		<target xsi:type="File" name="error"
-            fileName="${DefaultPath}\error\${DefaultName}.log"
+            fileName="${DefaultPath}\error.log"
             encoding="utf-8"
-            archiveFileName="${DefaultPath}\error\${DefaultName}.{#####}.txt"
+            archiveFileName="${DefaultPath}\error.{#####}.log"
             archiveAboveSize="5120000"
             archiveNumbering="Sequence"
             maxArchiveFiles="10"
             layout="${DefaultLayout}" />
-
-		<target xsi:type="File" name="whole"
-            fileName="${DefaultPath}\whole\${DefaultName}.log"
-            encoding="utf-8"
-            archiveFileName="${DefaultPath}\whole\${DefaultName}.{#####}.txt"
-            archiveAboveSize="5120000"
-            archiveNumbering="Sequence"
-            maxArchiveFiles="10"
-            layout="${DefaultLayout}" />
-
-		<target xsi:type="Console" name="console"
-            layout="${DefaultLayout}" />
-
-		<!-- ${date:format=yyyy-MM-dd} -->
-
 	</targets>
-
 	<rules>
-
-		<logger name="*" levels="Info" writeTo="info" />
-		<logger name="*" levels="Warn" writeTo="warn" />
+		<logger name="*" levels="Info,Warn,Error" writeTo="info" />
 		<logger name="*" levels="Error" writeTo="error" />
-
-		<logger name="*" levels="Trace,Debug,Info,Warn,Error" writeTo="console, whole" />
-
 	</rules>
-
 </nlog>
