--- a/NetCoreProject.NUnit/appsettings.json
+++ b/NetCoreProject.NUnit/appsettings.json
@@ -12,7 +12,7 @@
       }
     },
     "LogLevel": {
-      // Trace, Debug, Information, Warn, Error
+      // Trace, Debug, Information, Warning, Error
       "Default": "Information",
       "NetCoreProject": "Information",
       "System": "Information",
@@ -39,11 +39,11 @@
     // string
     "StringSecretKey": "CC5B1B93EDA34B788DD2743CA39BAF89",
     // pem
-    "PemPublicFile": "server-public.pem",
-    "PemPrivateFile": "server-private.pem",
+    "PemPublicFile": "public.pem",
+    "PemPrivateFile": "private.pem",
     // pfx
-    "PfxFile": "test.pfx",
-    "PfxPassword": "123456"
+    "PfxFile": "jwt.pfx",
+    "PfxPassword": "Password"
   },
   "JwtConfig": {
     "NameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier",
